Fix Google logo alignment in survey header.

--- a/assets/sass/components/surveys/_googlesitekit-survey-header.scss
+++ b/assets/sass/components/surveys/_googlesitekit-survey-header.scss
@@ -42,6 +42,7 @@
 	}
 
 	.googlesitekit-survey__header {
+		align-items: center;
 		display: flex;
 		flex-wrap: nowrap;
 		padding: $grid-gap-phone $grid-gap-phone 8px;
